# avs_2nd

./: .gitignore  README.md
sdk-folder/application-necessities/: cblAuthDelegate.db  certifiedSender.db  miscDatabase.db
sdk-folder/sdk-build/: AlexaClientSDK.pc  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
sdk-folder/sdk-build/ACL/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/ADSL/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/AFML/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/AVSCommon/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/ApplicationUtilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/BluetoothImplementations/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/CapabilitiesDelegate/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/CapabilityAgents/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/CertifiedSender/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/ContextManager/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/ESP/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-build/Integration/: AlexaClientSDKConfig.json  CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk-folder/sdk-source/avs-device-sdk/KWD/Unisound/src/: CMakeLists.txt  UnisoundKeywordDetector.cpp
sdk-folder/toolchain/: arm.toolchain.cmake
(+400 files in other folders)
